# simple_chat

./: Cargo.toml
src/: chat.glade  form.rs  main.rs
src/libs/: mod.rs  redisrw.rs
src/model/: connection.rs  message.rs  mod.rs  settings.rs
