[package]
name = "chat"
version = "0.2.0"
authors = ["NeedPainkillers <46500324+NeedPainkillers@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = ""
regex = ""
chrono = { version = "", features = ["serde"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.glib]
version = ""
features = ["v2_44"]